reload items after opening modal

--- a/src/app/dashboard/main/edit-item/edit-item.component.scss
+++ b/src/app/dashboard/main/edit-item/edit-item.component.scss
@@ -1,8 +1,9 @@
 .image-overlay {
     display: none;
-    width: 105px;
-    height: 105px;
+    width: 100px;
+    height: 100px;
     margin: 10px;
+    border-radius: 5px;
 }
 
 .image-overlay-wrapper {
