--- a/src/app/dashboard/main/main.component.html
+++ b/src/app/dashboard/main/main.component.html
@@ -6,11 +6,11 @@
                     <md-spinner *ngIf="loadingItems" fxFlex></md-spinner>
 
                     <div class="content" *ngIf="!loadingItems" fxLayoutGap="16px" fxLayout="column" fxFlex.lt-md="100%" fxFlex.gt-md="50%">
-                        <app-item-card *ngFor="let item of leftItems" [item]="item"></app-item-card>
+                        <app-item-card *ngFor="let item of leftItems" [item]="item" (refreshItems)="loadItems()"></app-item-card>
                     </div>
 
                     <div fxHide.lt-md class="content" *ngIf="!loadingItems" style="margin-left: 16px;" fxLayoutGap="16px" fxLayout="column" fxFlex="50%">
-                        <app-item-card *ngFor="let item of rightItems" [item]="item"></app-item-card>
+                        <app-item-card *ngFor="let item of rightItems" [item]="item" (refreshItems)="loadItems()"></app-item-card>
                     </div>
                 </div>
 
