UI fixes for prod ready APP

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 
     <md-toolbar style="height: 64px;" color="primary" class="pb4">
         <a href="#" routerLink="/dashboard" style="color: white; text-decoration: none;">
-            <span>Angular Material</span>
+            <span>Lost Box</span>
         </a>
         <span fxFlex></span>
 
