--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,21 @@
-<div fxLayout="row" class="mt4">
-    <div fxFlex="80%" fxFlexOffset="10%" class="mt4">
-        <div fxLayout="column" class="mt4">
-            <div fxLayoutAlign="space-around center" class="mt4">
-                <button class="p4" md-raised-button color="primary" fxFlex routerLink="/login">Login</button>
+<div fxLayout="row" class="my-4">
+    <div fxFlex="60%" fxFlexOffset="20%" class="my-4">
+        <div fxLayout="column" class="my-4">
+            <div fxFlex="40%" class="my-4">
+                <h2>
+                    Lost Box
+                </h2>
+
+                <h3>
+                    A place where you can find your things which you've lost
+                </h3>
+            </div>
+            <div fxFlex="60%" class="my-4">
+                <button class="homepage-button full-width" mat-raised-button color="primary" routerLink="/login">
+                    <span class="p-4">
+                        Login
+                    </span>
+                </button>
             </div>
         </div>
     </div>
