--- a/src/app/dashboard/change-password/change-password.component.html
+++ b/src/app/dashboard/change-password/change-password.component.html
@@ -1,40 +1,40 @@
-<div fxFlex="100%" class="mt4 pt2" fxLayout="column" fxLayoutAlign="center stretch">
-    <div class="content mt4 pt2" fxLayout="row" fxLayoutGap="16px">
-        <div fxFlex.lt-sm="100%" fxFlex="70%" fxFlexOffset.gt-xs="15%">
-            <div fxLayout="row">
+<div fxFlex="100%" class="my-4 py-2" fxLayout="column" fxLayoutAlign="center stretch">
+    <div class="content my-4 py-2" fxLayout="row">
+        <div fxFlex.lt-sm="100%" fxFlex="70%" fxFlexOffset.gt-xs="15%" class="my-4 py-4">
+            <div fxLayout="row" class="my-4 py-4">
                 <div fxFlex.gt-sm="50%" fxFlexOffset.gt-sm="25%">
-                    <md-card class="indigo-background-color">
-                        <md-card-header>
+                    <mat-card class="indigo-background-color">
+                        <mat-card-header>
                             <div fxFlex fxLayoutAlign="center center">
-                                <md-icon class="white-text-color">security</md-icon>
+                                <mat-icon class="white-text-color">security</mat-icon>
                                 &nbsp;&nbsp;
                                 <h2 class="white-text-color">
                                     Change Password
                                 </h2>
                             </div>
-                        </md-card-header>
-                        <md-card-content>
+                        </mat-card-header>
+                        <mat-card-content>
                             <div fxLayout="column">
-                                <md-input-container fxFlex class="white-input mt1" hintLabel="{{oldPasswordError}}">
-                                    <input mdInput type="password" placeholder="Old Password" [(ngModel)]="user.oldPassword">
-                                </md-input-container>
+                                <mat-form-field fxFlex class="white-input mt-1" hintLabel="{{oldPasswordError}}">
+                                    <input matInput type="password" placeholder="Old Password" [(ngModel)]="user.oldPassword">
+                                </mat-form-field>
 
-                                <md-input-container fxFlex class="white-input mt1" hintLabel="{{newPasswordError}}">
-                                    <input mdInput type="password" placeholder="New Password" [(ngModel)]="user.newPassword">
-                                </md-input-container>
+                                <mat-form-field fxFlex class="white-input mt-1" hintLabel="{{newPasswordError}}">
+                                    <input matInput type="password" placeholder="New Password" [(ngModel)]="user.newPassword">
+                                </mat-form-field>
 
-                                <md-input-container fxFlex class="white-input mt1" hintLabel="{{newPasswordMatchError}}">
-                                    <input mdInput type="password" placeholder="Confirm New Password" [(ngModel)]="user.confirmNewPassword">
-                                </md-input-container>
+                                <mat-form-field fxFlex class="white-input mt-1" hintLabel="{{newPasswordMatchError}}">
+                                    <input matInput type="password" placeholder="Confirm New Password" [(ngModel)]="user.confirmNewPassword">
+                                </mat-form-field>
 
                                 <div>
-                                    <div class="mt3" fxFlex>
-                                        <button md-raised-button fxFlex (click)="changePassword()">Change Password</button>
+                                    <div class="mt-3" fxFlex>
+                                        <button mat-raised-button class="full-width" (click)="changePassword()">Change Password</button>
                                     </div>
                                 </div>
                             </div>
-                        </md-card-content>
-                    </md-card>
+                        </mat-card-content>
+                    </mat-card>
                 </div>
             </div>
         </div>
