--- a/src/app/dashboard/user/user.component.html
+++ b/src/app/dashboard/user/user.component.html
@@ -1,59 +1,54 @@
-<div fxFlex="100%" class="mt4 pt2" fxLayout="column" fxLayoutAlign="center stretch">
-    <div class="content mt4 pt2" fxLayout="row" fxLayoutGap="16px">
-        <div fxFlex.lt-sm="100%" fxFlex="70%" fxFlexOffset.gt-xs="15%">
-            <div fxLayout="row">
+<div fxFlex="100%" class="my-4 py-2" fxLayout="column" fxLayoutAlign="center stretch">
+    <div class="content my-4 py-2" fxLayout="row">
+        <div class="my-4 pt-4" fxFlex.lt-sm="100%" fxFlex="70%" fxFlexOffset.gt-xs="15%">
+            <div fxLayout="row" class="my-4 py-4">
                 <div fxFlex.gt-sm="50%" fxFlexOffset.gt-sm="25%">
-                    <md-card class="indigo-background-color">
-                        <md-card-header>
+                    <mat-card class="indigo-background-color">
+                        <mat-card-header>
                             <div fxFlex fxLayoutAlign="center center">
-                                <md-icon class="white-text-color">account_circle</md-icon>
+                                <mat-icon class="white-text-color">account_circle</mat-icon>
                                 &nbsp;&nbsp;
                                 <h2 class="white-text-color">
                                     User Details
                                 </h2>
                             </div>
-                        </md-card-header>
-                        <md-card-content>
+                        </mat-card-header>
+                        <mat-card-content>
                             <div fxLayout="column">
                                 <div fxFlex="100%" fxLayout="row" fxLayoutAlign="center none">
-                                    <div class="avatar-100-image-overlay-wrapper">
-                                        <div class="avatar-100" class="avatar-100 avatar-100-image-overlay white-text-color">
-                                            <input type="file" id="profile-picture" ngFileSelect [options]="uploaderOptions" [events]="inputUploadEvent" (onUpload)="handleUpload($event)" (beforeUpload)="beforeUpload($event)" (onPreviewData)="handlePreviewData($event)">
-                                            <span>
-                                                <b>Change</b>&nbsp;
-                                            </span>
-                                            <md-icon>mode_edit</md-icon>
-                                        </div>
-                                        <img [src]="user.profilePictureUrl" alt="profile picture" class="avatar-100">
+                                    <app-upload-component 
+                                        [trigger]="'profile-picture'"
+                                        [uploadOnSelect]="true"
+                                        (onUpload)="onUploadComplete($event)"
+                                    ></app-upload-component>
+                                </div>
+
+                                <div fxFlex="100%" class="mt-1 mb-2" *ngIf="!!uploadProgress">
+                                    <mat-progress-bar class="white-progress-bar" [color]="primary" [mode]="determinate" [value]="uploadProgress">
+                                    </mat-progress-bar>
+                                </div>
+
+                                <mat-form-field fxFlex class="white-input mt-1" hintLabel="{{usernameError}}">
+                                    <input matInput placeholder="Username" [(ngModel)]="user.username">
+                                </mat-form-field>
+
+                                <mat-form-field fxFlex class="white-input mt-1" hintLabel="{{emailError}}">
+                                    <input matInput type="email" placeholder="Email" [(ngModel)]="user.email">
+                                </mat-form-field>
+
+                                <div class="mt-3">
+                                    <div fxFlex>
+                                        <button mat-raised-button class="full-width" (click)="saveChanges()">Save Changes</button>
                                     </div>
                                 </div>
-
-                                <div fxFlex="100%" class="mt1 mb2" *ngIf="!!uploadProgress">
-                                    <md-progress-bar class="white-progress-bar" [color]="primary" [mode]="determinate" [value]="uploadProgress">
-                                    </md-progress-bar>
-                                </div>
-
-                                <md-input-container fxFlex class="white-input mt1" hintLabel="{{usernameError}}">
-                                    <input mdInput placeholder="Username" [(ngModel)]="user.username">
-                                </md-input-container>
-
-                                <md-input-container fxFlex class="white-input mt1" hintLabel="{{emailError}}">
-                                    <input mdInput type="email" placeholder="Email" [(ngModel)]="user.email">
-                                </md-input-container>
-
-                                <div class="mt3">
+                                <div class="mt-1">
                                     <div fxFlex>
-                                        <button md-raised-button fxFlex (click)="saveChanges()">Save Changes</button>
-                                    </div>
-                                </div>
-                                <div class="mt1">
-                                    <div fxFlex>
-                                        <button routerLink="/dashboard/change-password" md-raised-button fxFlex>Change Password</button>
+                                        <button routerLink="/dashboard/change-password" mat-raised-button class="full-width">Change Password</button>
                                     </div>
                                 </div>
                             </div>
-                        </md-card-content>
-                    </md-card>
+                        </mat-card-content>
+                    </mat-card>
                 </div>
             </div>
         </div>
